Fixed minor spacing issue

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h1 {
 
 #cy {
     width: 100%;
-    height: 90%;
+    height: 85%;
     margin: 0 auto;
 }
 
